Changed ng serve to handle AWS EC2

--- a/angular.json
+++ b/angular.json
@@ -127,5 +127,8 @@
       }
     }
   },
-  "defaultProject": "thassign"
+  "defaultProject": "thassign",
+  "cli": {
+    "analytics": false
+  }
 }
