--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
     "ng": "ng",
     "start": "ng serve --host 0.0.0.0 --port 8080 --disableHostCheck true",
     "build": "ng build",
-    "test": "jest",
+    "test": "jest part.service.stitch.spec.ts --watch",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "test:watch": "jest --watch"
   },
   "author": "Fotso Teketchuet Stephane",
   "private": true,
@@ -23,10 +24,15 @@
     "@angular/platform-browser": "~9.1.0",
     "@angular/platform-browser-dynamic": "~9.1.0",
     "@angular/router": "~9.1.0",
+    "@hapi/joi": "^17.1.1",
     "@ngx-translate/core": "^12.1.2",
     "@ngx-translate/http-loader": "^4.0.0",
+    "joi-browser": "^13.4.0",
+    "joi-extract-type": "^15.0.2",
     "luxon": "^1.23.0",
     "messageformat": "^2.3.0",
+    "mongodb-stitch-browser-sdk": "^4.8.0",
+    "mongodb-stitch-browser-services-http": "^4.8.0",
     "ngx-translate-messageformat-compiler": "^4.6.0",
     "rxjs": "^6.5.5",
     "tslib": "^1.10.0",
@@ -40,15 +46,48 @@
     "@ngneat/spectator": "^5.3.1",
     "@types/faker": "^4.1.11",
     "@types/jest": "^25.2.1",
+    "@types/joi": "^14.3.4",
     "@types/luxon": "^1.22.0",
     "@types/node": "^13.11.0",
     "codelyzer": "^5.1.2",
     "faker": "^4.1.0",
     "jest": "^25.2.7",
+    "jest-preset-angular": "8.1.3",
     "protractor": "~5.4.3",
     "ts-jest": "^25.3.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~3.8.3"
+  },
+  "jest": {
+    "preset": "jest-preset-angular",
+    "roots": [
+      "src"
+    ],
+    "transform": {
+      "^.+\\.(ts|js|html)$": "ts-jest"
+    },
+    "setupFilesAfterEnv": [
+      "<rootDir>/src/setup-jest.ts"
+    ],
+    "collectCoverage": true,
+    "moduleNameMapper": {
+      "@app/(.*)": "<rootDir>/src/app/$1",
+      "@assets/(.*)": "<rootDir>/src/assets/$1",
+      "@core/(.*)": "<rootDir>/src/app/core/$1",
+      "@env": "<rootDir>/src/environments/environment",
+      "@src/(.*)": "<rootDir>/src/src/$1",
+      "@state/(.*)": "<rootDir>/src/app/state/$1"
+    },
+    "globals": {
+      "ts-jest": {
+        "tsConfig": "<rootDir>/tsconfig.spec.json",
+        "stringifyContentPathRegex": "\\.html$",
+        "astTransformers": [
+          "jest-preset-angular/build/InlineFilesTransformer",
+          "jest-preset-angular/build/StripStylesTransformer"
+        ]
+      }
+    }
   }
 }
