--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
   },
   "author": "Fotso Teketchuet Stephane",
   "private": true,
+  "node": {
+    "net": "empty",
+    "tls": "empty",
+    "dns": "empty"
+  },
   "dependencies": {
     "@angular/animations": "~9.1.0",
     "@angular/cdk": "^9.2.0",
@@ -27,8 +32,10 @@
     "@hapi/joi": "^17.1.1",
     "@ngx-translate/core": "^12.1.2",
     "@ngx-translate/http-loader": "^4.0.0",
+    "class-validator": "^0.11.1",
     "joi-browser": "^13.4.0",
     "joi-extract-type": "^15.0.2",
+    "joiful": "^2.0.0",
     "luxon": "^1.23.0",
     "messageformat": "^2.3.0",
     "mongodb-stitch-browser-sdk": "^4.8.0",
