replacing joi with class-validator

--- a/package.json
+++ b/package.json
@@ -29,13 +29,11 @@
     "@angular/platform-browser": "~9.1.1",
     "@angular/platform-browser-dynamic": "~9.1.1",
     "@angular/router": "~9.1.1",
-    "@hapi/joi": "^17.1.1",
     "@ngx-translate/core": "^12.1.2",
     "@ngx-translate/http-loader": "^4.0.0",
+    "class-transformer": "^0.2.3",
+    "class-transformer-validator": "^0.8.0",
     "class-validator": "^0.11.1",
-    "joi-browser": "^13.4.0",
-    "joi-extract-type": "^15.0.2",
-    "joiful": "^2.0.0",
     "luxon": "^1.23.0",
     "messageformat": "^2.3.0",
     "mongodb-stitch-browser-sdk": "^4.8.0",
@@ -53,7 +51,6 @@
     "@ngneat/spectator": "^5.3.1",
     "@types/faker": "^4.1.11",
     "@types/jest": "^25.2.1",
-    "@types/joi": "^14.3.4",
     "@types/luxon": "^1.22.0",
     "@types/node": "^13.11.0",
     "codelyzer": "^5.1.2",
