--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve --host 0.0.0.0 --port 8080 --disableHostCheck true",
     "build": "ng build",
-    "test": "jest auth.service.spec.ts",
+    "test": "jest",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "test:watch": "jest auth.service.spec.ts --watch"
