--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "faker": "^4.1.0",
     "jest": "^25.2.7",
     "jest-preset-angular": "8.1.3",
+    "mongodb": "^3.5.8",
     "protractor": "~5.4.3",
     "ts-jest": "^25.3.0",
     "ts-node": "~8.3.0",
