--- a/package.json
+++ b/package.json
@@ -18,48 +18,49 @@
     "dns": "empty"
   },
   "dependencies": {
-    "@angular/animations": "~9.1.9",
+    "@angular/animations": "^9.1.12",
     "@angular/cdk": "^9.2.4",
-    "@angular/common": "~9.1.9",
-    "@angular/compiler": "~9.1.9",
-    "@angular/core": "~9.1.9",
-    "@angular/flex-layout": "^9.0.0-beta.29",
-    "@angular/forms": "~9.1.9",
+    "@angular/common": "^9.1.12",
+    "@angular/compiler": "^9.1.12",
+    "@angular/core": "^9.1.12",
+    "@angular/flex-layout": "^9.0.0-beta.31",
+    "@angular/forms": "^9.1.12",
     "@angular/material": "^9.2.4",
-    "@angular/platform-browser": "~9.1.9",
-    "@angular/platform-browser-dynamic": "~9.1.9",
-    "@angular/router": "~9.1.9",
+    "@angular/platform-browser": "^9.1.12",
+    "@angular/platform-browser-dynamic": "^9.1.12",
+    "@angular/router": "^9.1.12",
     "@ngx-translate/core": "^12.1.2",
     "@ngx-translate/http-loader": "^4.0.0",
     "class-validator": "^0.11.1",
-    "luxon": "^1.23.0",
+    "luxon": "^1.24.1",
     "messageformat": "^2.3.0",
     "mongodb-stitch-browser-sdk": "^4.8.0",
     "mongodb-stitch-browser-services-http": "^4.8.0",
-    "ngx-translate-messageformat-compiler": "^4.6.0",
-    "rxjs": "^6.5.5",
-    "tslib": "^1.10.0",
+    "ngx-translate-messageformat-compiler": "^4.8.0",
+    "realm-web": "^0.8.0",
+    "rxjs": "^6.6.2",
+    "tslib": "^1.13.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.7",
-    "@angular/cli": "~9.1.7",
-    "@angular/compiler-cli": "~9.1.9",
-    "@angular/language-service": "~9.1.9",
-    "@ngneat/spectator": "^5.3.1",
-    "@types/faker": "^4.1.11",
-    "@types/jest": "^25.2.1",
-    "@types/luxon": "^1.22.0",
-    "@types/node": "^13.11.0",
+    "@angular-devkit/build-angular": "^0.901.12",
+    "@angular/cli": "^9.1.12",
+    "@angular/compiler-cli": "^9.1.12",
+    "@angular/language-service": "^9.1.12",
+    "@ngneat/spectator": "^5.12.0",
+    "@types/faker": "^4.1.12",
+    "@types/jest": "^25.2.3",
+    "@types/luxon": "^1.24.3",
+    "@types/node": "^13.13.15",
     "codelyzer": "^5.1.2",
     "faker": "^4.1.0",
-    "jest": "^25.2.7",
+    "jest": "^25.5.4",
     "jest-preset-angular": "8.1.3",
-    "mongodb": "^3.5.8",
-    "protractor": "~5.4.3",
-    "ts-jest": "^25.3.0",
+    "mongodb": "^3.6.0",
+    "protractor": "^5.4.4",
+    "ts-jest": "^25.5.1",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
+    "tslint": "^6.1.3",
     "typescript": "~3.8.3"
   },
   "jest": {
