--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "thassign",
   "version": "0.0.0",
   "scripts": {
+    "android": "tns run android --no-hmr",
+    "ios": "tns run ios --no-hmr",
+    "mobile": "tns run",
+    "preview": "tns preview",
+    "ngcc": "ngcc --properties es2015 module main --first-only",
+    "postinstall": "npm run ngcc",
     "ng": "ng",
     "start": "ng serve --host 0.0.0.0 --port 8080 --disableHostCheck true --poll=2000",
     "build": "ng build",
@@ -18,6 +24,11 @@
     "dns": "empty"
   },
   "dependencies": {
+    "@nativescript/angular": "~10.0.0",
+    "@nativescript/core": "rc",
+    "@nativescript/theme": "~2.2.1",
+    "reflect-metadata": "~0.1.12",
+    "tslib": "^1.10.0",
     "@angular/animations": "~9.1.9",
     "@angular/cdk": "^9.2.4",
     "@angular/common": "~9.1.9",
@@ -38,14 +49,16 @@
     "mongodb-stitch-browser-services-http": "^4.8.0",
     "ngx-translate-messageformat-compiler": "^4.6.0",
     "rxjs": "^6.5.5",
-    "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
+    "@nativescript/webpack": "~2.0.0",
+    "@nativescript/tslint-rules": "~0.0.5",
     "@angular-devkit/build-angular": "~0.901.7",
     "@angular/cli": "~9.1.7",
     "@angular/compiler-cli": "~9.1.9",
     "@angular/language-service": "~9.1.9",
+    "@nativescript/schematics": "^10.0.2",
     "@ngneat/spectator": "^5.3.1",
     "@types/faker": "^4.1.11",
     "@types/jest": "^25.2.1",
@@ -91,6 +104,12 @@
           "jest-preset-angular/build/StripStylesTransformer"
         ]
       }
+    }
+  },
+  "nativescript": {
+    "id": "org.nativescript.ngsample",
+    "tns-android": {
+      "version": "6.5.3"
     }
   }
 }
