Changing TS target compile from es2015 to es5 to fix an error about 'Subject' requiring 'new' object creation

--- a/angular.json
+++ b/angular.json
@@ -129,6 +129,7 @@
   },
   "defaultProject": "thassign",
   "cli": {
-    "defaultCollection": "@nativescript/schematics"
+    "defaultCollection": "@nativescript/schematics",
+    "analytics": false
   }
 }
