--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,18 +11,10 @@
     "module": "esnext",
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "es2015",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
-    "types": [
-      "node",
-      "jest"
-    ],
-    "lib": [
-      "es2018",
-      "dom"
-    ],
+    "target": "es5",
+    "typeRoots": ["node_modules/@types"],
+    "types": ["node", "jest"],
+    "lib": ["es2018", "dom"],
     "paths": {
       "@src/*": [
         "src/*.android.ts",
