Replaced Nativescript applicationId with org.lesauf.thassign

--- a/package.json
+++ b/package.json
@@ -107,7 +107,7 @@
     }
   },
   "nativescript": {
-    "id": "org.nativescript.ngsample",
+    "id": "org.lesauf.thassign",
     "tns-android": {
       "version": "6.5.3"
     }
