--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
     "@angular/platform-browser": "~9.1.9",
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
-    "@nativescript/angular": "~10.0.0",
-    "@nativescript/core": "rc",
-    "@nativescript/theme": "~2.2.1",
+    "@nativescript/angular": "~9.0.0",
+    "@nativescript/core": "^6.5.15",
+    "@nativescript/theme": "^2.3.3",
     "@ngx-translate/core": "^12.1.2",
     "@ngx-translate/http-loader": "^4.0.0",
     "class-validator": "^0.11.1",
@@ -52,14 +52,15 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@nativescript/webpack": "~2.0.0",
-    "@nativescript/tslint-rules": "~0.0.5",
     "@angular-devkit/build-angular": "~0.901.7",
     "@angular/cli": "~9.1.7",
     "@angular/compiler-cli": "~9.1.9",
     "@angular/language-service": "~9.1.9",
-    "@nativescript/schematics": "^10.0.2",
+    "@nativescript/schematics": "~9.0.0",
+    "@nativescript/tslint-rules": "~0.0.5",
+    "@nativescript/webpack": "~2.0.0",
     "@ngneat/spectator": "^5.3.1",
+    "@ngtools/webpack": "~9.1.0",
     "@types/faker": "^4.1.11",
     "@types/jest": "^25.2.1",
     "@types/luxon": "^1.22.0",
