Upgrading to angular 9

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "mobile": "tns run",
     "preview": "tns preview",
     "ngcc": "ngcc --properties es2015 module main --first-only",
-    "postinstall": "npm run ngcc",
+    "postinstall": "ngcc",
     "ng": "ng",
     "start": "ng serve --host 0.0.0.0 --port 8080 --disableHostCheck true --poll=2000",
     "build": "ng build",
@@ -35,8 +35,8 @@
     "@angular/platform-browser": "~9.1.9",
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
-    "@nativescript/angular": "~9.0.0",
-    "@nativescript/core": "^6.5.15",
+    "@nativescript/angular": "rc",
+    "@nativescript/core": "rc",
     "@nativescript/theme": "^2.3.3",
     "@ngx-translate/core": "^12.1.2",
     "@ngx-translate/http-loader": "^4.0.0",
@@ -58,7 +58,8 @@
     "@angular/language-service": "~9.1.9",
     "@nativescript/schematics": "~9.0.0",
     "@nativescript/tslint-rules": "~0.0.5",
-    "@nativescript/webpack": "~2.0.0",
+    "@nativescript/types": "rc",
+    "@nativescript/webpack": "rc",
     "@ngneat/spectator": "^5.3.1",
     "@ngtools/webpack": "~9.1.0",
     "@types/faker": "^4.1.11",
