Updated to Angular 10

--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "ios": "tns run ios --no-hmr",
     "mobile": "tns run",
     "preview": "tns preview",
+    "clean": "npx rimraf hooks node_modules package-lock.json platforms && npm i",
     "ngcc": "ngcc --properties es2015 module main --first-only",
-    "postinstall": "ngcc",
+    "postinstall": "npm run ngcc",
     "ng": "ng",
     "start": "ng serve --host 0.0.0.0 --port 8080 --disableHostCheck true --poll=2000",
     "build": "ng build",
@@ -25,13 +26,13 @@
   },
   "dependencies": {
     "@angular/animations": "~10.0.11",
-    "@angular/cdk": "^9.2.4",
+    "@angular/cdk": "^10.1.3",
     "@angular/common": "~10.0.11",
     "@angular/compiler": "~10.0.11",
     "@angular/core": "~10.0.11",
-    "@angular/flex-layout": "^9.0.0-beta.29",
+    "@angular/flex-layout": "^10.0.0-beta.32",
     "@angular/forms": "~10.0.11",
-    "@angular/material": "^9.2.4",
+    "@angular/material": "^10.1.3",
     "@angular/platform-browser": "~10.0.11",
     "@angular/platform-browser-dynamic": "~10.0.11",
     "@angular/router": "~10.0.11",
@@ -45,6 +46,7 @@
     "messageformat": "^2.3.0",
     "mongodb-stitch-browser-sdk": "^4.8.0",
     "mongodb-stitch-browser-services-http": "^4.8.0",
+    "nativescript-pro-ui": "^3.4.1",
     "ngx-translate-messageformat-compiler": "^4.6.0",
     "reflect-metadata": "~0.1.12",
     "rxjs": "^6.5.5",
@@ -61,11 +63,13 @@
     "@nativescript/types": "rc",
     "@nativescript/webpack": "rc",
     "@ngneat/spectator": "^5.3.1",
+    "@ngtools/webpack": "~10.0.0",
     "@types/faker": "^4.1.11",
     "@types/jest": "^25.2.1",
     "@types/luxon": "^1.22.0",
     "@types/node": "^13.11.0",
     "codelyzer": "^6.0.0",
+    "copy-webpack-plugin": "^6.0.3",
     "faker": "^4.1.0",
     "jest": "^25.2.7",
     "jest-preset-angular": "8.1.3",
