--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -11,10 +11,10 @@
     "module": "es2020",
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "es5",
+    "target": "es2015",
     "typeRoots": ["node_modules/@types"],
     "types": ["node", "jest"],
-    "lib": ["es2018", "dom"],
+    "lib": ["es2018", "es2017", "dom", "es6"],
     "paths": {
       "@src/*": [
         "src/*.android.ts",
