--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/common": "~10.0.11",
     "@angular/compiler": "~10.0.11",
     "@angular/core": "~10.0.11",
+    "@angular/fire": "^6.0.2",
     "@angular/flex-layout": "^10.0.0-beta.32",
     "@angular/forms": "~10.0.11",
     "@angular/material": "^10.1.3",
@@ -52,7 +53,8 @@
     "reflect-metadata": "~0.1.12",
     "rxjs": "^6.5.5",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "firebase": "^7.13.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.6",
@@ -79,7 +81,13 @@
     "ts-jest": "^25.5.1",
     "ts-node": "~8.3.0",
     "tslint": "^6.1.3",
-    "typescript": "~3.9.7"
+    "typescript": "~3.9.7",
+    "@angular-devkit/architect": ">= 0.900 < 0.1100",
+    "firebase-tools": "^8.0.0",
+    "fuzzy": "^0.1.3",
+    "inquirer": "^6.2.2",
+    "inquirer-autocomplete-prompt": "^1.0.1",
+    "open": "^7.0.3"
   },
   "jest": {
     "preset": "jest-preset-angular",
