--- a/App_Resources/Android/app.gradle
+++ b/App_Resources/Android/app.gradle
@@ -1,14 +1,18 @@
+apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 // Add your native dependencies here:
 
 // Uncomment to add recyclerview-v7 dependency
-//dependencies {
+dependencies {
 //	compile 'com.android.support:recyclerview-v7:+'
-//}
+  implementation 'com.google.firebase:firebase-analytics:17.5.0'
+}
 
 android {  
   defaultConfig {  
     generatedDensities = []
-    applicationId = "org.lesauf.thassign" 
+    applicationId = "com.lesauf.thassign" 
+    multiDexEnabled true
     
     //override supported platforms
     // ndk {
@@ -20,4 +24,11 @@ android {
   aaptOptions {  
     additionalParameters "--no-version-vectors"  
   }  
+  dexOptions {
+    javaMaxHeapSize "4g"
+  }
+  project.ext {
+    googlePlayServicesVersion = "+"
+  }
 } 
+
