--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,15 +1,11 @@
 {
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
+    "experimentalDecorators": true,
     "outDir": "./out-tsc/app",
-    "types": [
-      "node"
-    ],
+    "types": ["node"],
     "paths": {
-      "@src/*": [
-        "src/*.web",
-        "src/*"
-      ]
+      "@src/*": ["src/*.web", "src/*"]
     }
   },
   "files": [
@@ -18,8 +14,5 @@
     "src/main.ts",
     "src/polyfills.ts"
   ],
-  "exclude": [
-    "src/test.ts",
-    "src/**/*.spec.ts"
-  ]
+  "exclude": ["src/test.ts", "src/**/*.spec.ts"]
 }
