--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "ios": "tns run ios --no-hmr",
     "mobile": "tns run",
     "preview": "tns preview",
-    "clean": "npx rimraf hooks node_modules package-lock.json platforms && npm i",
+    "clean": "npx rimraf hooks node_modules package-lock.json platforms",
     "ngcc": "ngcc --properties es2015 module main --first-only",
     "postinstall": "npm run ngcc",
     "ng": "ng",
@@ -37,11 +37,12 @@
     "@angular/platform-browser": "~10.0.11",
     "@angular/platform-browser-dynamic": "~10.0.11",
     "@angular/router": "~10.0.11",
-    "@nativescript/angular": "rc",
+    "@nativescript/angular": "~10.0.0",
     "@nativescript/core": "rc",
-    "@nativescript/theme": "^2.3.3",
+    "@nativescript/theme": "^2.2.1",
     "@ngx-translate/core": "^12.1.2",
     "@ngx-translate/http-loader": "^4.0.0",
+    "core-js": "^2.6.9",
     "class-validator": "^0.11.1",
     "firebase": "^7.13.1",
     "luxon": "^1.24.1",
@@ -54,36 +55,35 @@
     "realm-web": "^0.8.1",
     "reflect-metadata": "~0.1.12",
     "rxjs": "^6.5.5",
-    "tns-core-modules": "^6.5.15",
-    "tslib": "^2.0.0",
+    "tslib": "1.10.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.6",
+    "@angular-devkit/build-angular": "~0.1000.2",
     "@angular/cli": "~10.0.6",
     "@angular/compiler-cli": "~10.0.11",
     "@angular/language-service": "~10.0.11",
     "@nativescript/schematics": "~9.0.0",
     "@nativescript/tslint-rules": "~0.0.5",
     "@nativescript/types": "rc",
-    "@nativescript/webpack": "rc",
+    "@nativescript/webpack": "~2.0.0",
     "@ngneat/spectator": "^5.3.1",
     "@ngtools/webpack": "~10.0.0",
     "@types/faker": "^4.1.11",
     "@types/jest": "^25.2.1",
     "@types/luxon": "^1.22.0",
-    "@types/node": "^13.11.0",
-    "codelyzer": "^6.0.0",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
     "copy-webpack-plugin": "^6.0.3",
     "faker": "^4.1.0",
     "jest": "^25.5.4",
     "jest-preset-angular": "8.1.3",
     "mongodb": "^3.6.0",
-    "protractor": "~7.0.0",
+    "protractor": "~5.4.3",
     "ts-jest": "^25.5.1",
     "ts-node": "~8.3.0",
-    "tslint": "^6.1.3",
-    "typescript": "~3.9.7",
+    "tslint": "^6.1.0",
+    "typescript": "~3.9.0",
     "@angular-devkit/architect": ">= 0.900 < 0.1100",
     "firebase-tools": "^8.0.0",
     "fuzzy": "^0.1.3",
