--- a/package.json
+++ b/package.json
@@ -37,13 +37,14 @@
     "@angular/platform-browser": "~10.0.11",
     "@angular/platform-browser-dynamic": "~10.0.11",
     "@angular/router": "~10.0.11",
+    "@fortawesome/angular-fontawesome": "^0.7.0",
     "@nativescript/angular": "~10.0.0",
     "@nativescript/core": "rc",
     "@nativescript/theme": "^2.2.1",
     "@ngx-translate/core": "^12.1.2",
     "@ngx-translate/http-loader": "^4.0.0",
-    "core-js": "^2.6.9",
     "class-validator": "^0.11.1",
+    "core-js": "^2.6.9",
     "firebase": "^7.13.1",
     "luxon": "^1.24.1",
     "messageformat": "^2.3.0",
