--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@angular/platform-browser-dynamic": "~10.0.11",
     "@angular/router": "~10.0.11",
     "@fortawesome/angular-fontawesome": "^0.7.0",
-    "@nativescript/angular": "~10.0.0",
+    "@nativescript/angular": "^10.0.3",
     "@nativescript/core": "rc",
     "@nativescript/theme": "^2.2.1",
     "@ngx-translate/core": "^12.1.2",
