--- a/package.json
+++ b/package.json
@@ -25,18 +25,18 @@
     "dns": "empty"
   },
   "dependencies": {
-    "@angular/animations": "~10.0.11",
+    "@angular/animations": "~11.1.0",
     "@angular/cdk": "^10.1.3",
-    "@angular/common": "~10.0.11",
-    "@angular/compiler": "~10.0.11",
-    "@angular/core": "~10.0.11",
+    "@angular/common": "~11.1.0",
+    "@angular/compiler": "~11.1.0",
+    "@angular/core": "~11.1.0",
     "@angular/fire": "^6.0.2",
     "@angular/flex-layout": "^10.0.0-beta.32",
-    "@angular/forms": "~10.0.11",
+    "@angular/forms": "~11.1.0",
     "@angular/material": "^10.1.3",
-    "@angular/platform-browser": "~10.0.11",
-    "@angular/platform-browser-dynamic": "~10.0.11",
-    "@angular/router": "~10.0.11",
+    "@angular/platform-browser": "~11.1.0",
+    "@angular/platform-browser-dynamic": "~11.1.0",
+    "@angular/router": "~11.1.0",
     "@fortawesome/angular-fontawesome": "^0.7.0",
     "@nativescript/angular": "^10.0.3",
     "@nativescript/core": "rc",
@@ -54,14 +54,14 @@
     "ngx-translate-messageformat-compiler": "^4.6.0",
     "reflect-metadata": "~0.1.12",
     "rxjs": "^6.5.5",
-    "tslib": "1.10.0",
+    "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.2",
-    "@angular/cli": "~10.0.6",
-    "@angular/compiler-cli": "~10.0.11",
-    "@angular/language-service": "~10.0.11",
+    "@angular-devkit/build-angular": "~0.1101.1",
+    "@angular/cli": "~11.1.1",
+    "@angular/compiler-cli": "~11.1.0",
+    "@angular/language-service": "~11.1.0",
     "@nativescript/schematics": "~9.0.0",
     "@nativescript/tslint-rules": "~0.0.5",
     "@nativescript/types": "rc",
@@ -72,17 +72,17 @@
     "@types/jest": "^25.2.1",
     "@types/luxon": "^1.22.0",
     "@types/node": "^12.11.1",
-    "codelyzer": "^5.1.2",
+    "codelyzer": "^6.0.0",
     "copy-webpack-plugin": "^6.0.3",
     "faker": "^4.1.0",
     "jest": "^25.5.4",
     "jest-preset-angular": "8.1.3",
-    "protractor": "~5.4.3",
+    "protractor": "~7.0.0",
     "ts-jest": "^25.5.1",
     "ts-node": "~8.3.0",
     "tslint": "^6.1.0",
-    "typescript": "~3.9.0",
-    "@angular-devkit/architect": ">= 0.900 < 0.1100",
+    "typescript": "~4.1.3",
+    "@angular-devkit/architect": "0.1101.1",
     "firebase-tools": "^8.0.0",
     "fuzzy": "^0.1.3",
     "inquirer": "^6.2.2",
