--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "ngcc": "ngcc --properties es2015 module main --first-only",
     "postinstall": "npm run ngcc",
     "ng": "ng",
-    "start": "ng serve --host 0.0.0.0 --port 8080 --disableHostCheck true --poll=2000",
+    "start": "ng serve --host 0.0.0.0 --port 8080 --disable-host-check true --poll=2000",
     "build": "ng build",
     "test": "jest",
     "lint": "ng lint",
@@ -30,64 +30,64 @@
     "@angular/common": "~11.1.0",
     "@angular/compiler": "~11.1.0",
     "@angular/core": "~11.1.0",
-    "@angular/fire": "^6.0.2",
+    "@angular/fire": "^6.1.4",
     "@angular/flex-layout": "^11.0.0-beta.33",
     "@angular/forms": "~11.1.0",
     "@angular/material": "^11.1.0",
     "@angular/platform-browser": "~11.1.0",
     "@angular/platform-browser-dynamic": "~11.1.0",
     "@angular/router": "~11.1.0",
-    "@fortawesome/angular-fontawesome": "^0.7.0",
-    "@nativescript/angular": "^10.0.3",
-    "@nativescript/core": "rc",
-    "@nativescript/theme": "^2.2.1",
-    "@ngx-translate/core": "^12.1.2",
-    "@ngx-translate/http-loader": "^4.0.0",
-    "class-validator": "^0.11.1",
-    "core-js": "^2.6.9",
+    "@fortawesome/angular-fontawesome": "^0.8.1",
+    "@nativescript/angular": "^11.0.1",
+    "@nativescript/core": "^7.1.4",
+    "@nativescript/theme": "^3.0.1",
+    "@ngx-translate/core": "^13.0.0",
+    "@ngx-translate/http-loader": "^6.0.0",
+    "class-validator": "^0.13.1",
+    "core-js": "^3.8.3",
     "epubjs": "^0.3.88",
-    "firebase": "^7.13.1",
-    "luxon": "^1.24.1",
+    "firebase": "^8.2.4",
+    "luxon": "^1.25.0",
     "messageformat": "^2.3.0",
-    "nativescript-plugin-firebase": "^10.5.2",
+    "nativescript-plugin-firebase": "^10.6.3",
     "nativescript-pro-ui": "^3.4.1",
-    "ngx-translate-messageformat-compiler": "^4.6.0",
-    "reflect-metadata": "~0.1.12",
-    "rxjs": "^6.5.5",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.10.2"
+    "ngx-translate-messageformat-compiler": "^4.9.0",
+    "reflect-metadata": "~0.1.13",
+    "rxjs": "^6.6.3",
+    "tslib": "^2.1.0",
+    "zone.js": "~0.11.3"
   },
   "devDependencies": {
+    "@angular-devkit/architect": "0.1101.1",
     "@angular-devkit/build-angular": "~0.1101.1",
     "@angular/cli": "~11.1.1",
     "@angular/compiler-cli": "~11.1.0",
     "@angular/language-service": "~11.1.0",
-    "@nativescript/schematics": "~9.0.0",
+    "@nativescript/schematics": "~11.0.0",
     "@nativescript/tslint-rules": "~0.0.5",
-    "@nativescript/types": "rc",
-    "@nativescript/webpack": "~2.0.0",
-    "@ngneat/spectator": "^5.3.1",
-    "@ngtools/webpack": "~10.0.0",
-    "@types/faker": "^4.1.11",
-    "@types/jest": "^25.2.1",
-    "@types/luxon": "^1.22.0",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
-    "copy-webpack-plugin": "^6.0.3",
-    "faker": "^4.1.0",
-    "jest": "^25.5.4",
-    "jest-preset-angular": "8.1.3",
-    "protractor": "~7.0.0",
-    "ts-jest": "^25.5.1",
-    "ts-node": "~8.3.0",
-    "tslint": "^6.1.0",
-    "typescript": "~4.1.3",
-    "@angular-devkit/architect": "0.1101.1",
-    "firebase-tools": "^8.0.0",
+    "@nativescript/types": "^7.1.0",
+    "@nativescript/webpack": "~4.0.1",
+    "@ngneat/spectator": "^6.1.3",
+    "@ngtools/webpack": "^11.1.1",
+    "@types/faker": "^5.1.5",
+    "@types/jest": "^26.0.20",
+    "@types/luxon": "^1.25.1",
+    "@types/node": "^14.14.22",
+    "codelyzer": "^6.0.1",
+    "copy-webpack-plugin": "^7.0.0",
+    "faker": "^5.2.0",
+    "firebase-tools": "^9.2.2",
     "fuzzy": "^0.1.3",
-    "inquirer": "^6.2.2",
-    "inquirer-autocomplete-prompt": "^1.0.1",
-    "open": "^7.0.3"
+    "inquirer": "^7.3.3",
+    "inquirer-autocomplete-prompt": "^1.3.0",
+    "jest": "^26.6.3",
+    "jest-preset-angular": "8.3.2",
+    "open": "^7.3.1",
+    "protractor": "~7.0.0",
+    "ts-jest": "^26.4.4",
+    "ts-node": "~9.1.1",
+    "tslint": "^6.1.0",
+    "typescript": "~4.1.3"
   },
   "jest": {
     "preset": "jest-preset-angular",
