--- a/package.json
+++ b/package.json
@@ -30,62 +30,62 @@
     "@angular/common": "~12.2.2",
     "@angular/compiler": "~12.2.2",
     "@angular/core": "~12.2.2",
-    "@angular/fire": "^6.1.4",
-    "@angular/flex-layout": "^11.0.0-beta.33",
+    "@angular/fire": "^6.1.5",
+    "@angular/flex-layout": "^12.0.0-beta.34",
     "@angular/forms": "~12.2.2",
     "@angular/material": "^12.2.2",
     "@angular/platform-browser": "~12.2.2",
     "@angular/platform-browser-dynamic": "~12.2.2",
     "@angular/router": "~12.2.2",
-    "@fortawesome/angular-fontawesome": "^0.8.1",
-    "@nativescript/angular": "^11.0.1",
-    "@nativescript/core": "^7.1.4",
+    "@fortawesome/angular-fontawesome": "^0.9.0",
+    "@nativescript/angular": "^12.0.6",
+    "@nativescript/core": "^8.0.8",
     "@nativescript/theme": "^3.0.1",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
     "class-validator": "^0.13.1",
-    "core-js": "^3.8.3",
+    "core-js": "^3.16.2",
     "epubjs": "^0.3.88",
-    "firebase": "^8.2.4",
-    "luxon": "^1.25.0",
+    "firebase": "^8.10.0",
+    "luxon": "^2.0.2",
     "messageformat": "^2.3.0",
     "nativescript-plugin-firebase": "^10.6.3",
     "nativescript-pro-ui": "^3.4.1",
-    "ngx-translate-messageformat-compiler": "^4.9.0",
+    "ngx-translate-messageformat-compiler": "^4.10.0",
     "reflect-metadata": "~0.1.13",
-    "rxjs": "^6.6.3",
-    "tslib": "^2.1.0",
+    "rxjs": "^7.3.0",
+    "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/architect": "0.1202.2",
-    "@angular-devkit/build-angular": "~12.2.2",
+    "@angular-devkit/build-angular": "^12.1.1",
     "@angular/cli": "~12.2.2",
     "@angular/compiler-cli": "~12.2.2",
     "@angular/language-service": "~12.2.2",
-    "@nativescript/schematics": "~11.0.0",
+    "@nativescript/schematics": "^11.2.0",
     "@nativescript/tslint-rules": "~0.0.5",
-    "@nativescript/types": "^7.1.0",
-    "@nativescript/webpack": "~4.0.1",
-    "@ngneat/spectator": "^6.1.3",
-    "@ngtools/webpack": "^11.1.1",
-    "@types/faker": "^5.1.5",
-    "@types/jest": "^26.0.20",
-    "@types/luxon": "^1.25.1",
-    "@types/node": "^14.14.22",
-    "codelyzer": "^6.0.1",
-    "copy-webpack-plugin": "^7.0.0",
-    "faker": "^5.2.0",
-    "firebase-tools": "^9.2.2",
+    "@nativescript/types": "^8.0.1",
+    "@nativescript/webpack": "^4.1.0",
+    "@ngneat/spectator": "^8.0.3",
+    "@ngtools/webpack": "^12.2.2",
+    "@types/faker": "^5.5.8",
+    "@types/jest": "^27.0.1",
+    "@types/luxon": "^2.0.0",
+    "@types/node": "^16.6.2",
+    "codelyzer": "^6.0.2",
+    "copy-webpack-plugin": "^9.0.1",
+    "faker": "^5.5.3",
+    "firebase-tools": "^9.16.5",
     "fuzzy": "^0.1.3",
-    "inquirer": "^7.3.3",
-    "inquirer-autocomplete-prompt": "^1.3.0",
-    "jest": "^26.6.3",
-    "jest-preset-angular": "8.3.2",
-    "open": "^7.3.1",
+    "inquirer": "^8.1.2",
+    "inquirer-autocomplete-prompt": "^1.4.0",
+    "jest": "^27.0.6",
+    "jest-preset-angular": "^9.0.6",
+    "open": "^8.2.1",
     "protractor": "~7.0.0",
-    "ts-jest": "^26.4.4",
-    "ts-node": "~9.1.1",
+    "ts-jest": "^27.0.5",
+    "ts-node": "^10.2.1",
     "tslint": "^6.1.0",
     "typescript": "~4.3.5"
   },
