--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "nativescript-plugin-firebase": "^10.6.3",
     "nativescript-pro-ui": "^3.4.1",
     "ngx-translate-messageformat-compiler": "^4.10.0",
+    "postcss": "^8.3.11",
     "reflect-metadata": "~0.1.13",
     "rxjs": "^7.3.0",
     "tslib": "^2.3.1",
