--- a/package.json
+++ b/package.json
@@ -43,13 +43,13 @@
     "@nativescript/theme": "^3.0.1",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
-    "class-validator": "^0.13.1",
+    "class-validator": "^0.14.0",
     "core-js": "^3.16.2",
     "epubjs": "^0.3.90",
     "firebase": "^8.10.0",
     "luxon": "^2.0.2",
     "messageformat": "^2.3.0",
-    "nativescript-plugin-firebase": "^10.6.3",
+    "nativescript-plugin-firebase": "^5.2.0",
     "nativescript-pro-ui": "^3.4.1",
     "ngx-translate-messageformat-compiler": "^4.10.0",
     "postcss": "^8.3.11",
@@ -60,31 +60,31 @@
   },
   "devDependencies": {
     "@angular-devkit/architect": "0.1202.2",
-    "@angular-devkit/build-angular": "^12.1.1",
-    "@angular/cli": "~12.2.2",
+    "@angular-devkit/build-angular": "^17.0.6",
+    "@angular/cli": "^17.0.6",
     "@angular/compiler-cli": "~12.2.2",
     "@angular/language-service": "~12.2.2",
     "@nativescript/schematics": "^11.2.0",
     "@nativescript/tslint-rules": "~0.0.5",
     "@nativescript/types": "^8.0.1",
-    "@nativescript/webpack": "^4.1.0",
+    "@nativescript/webpack": "^5.0.18",
     "@ngneat/spectator": "^8.0.3",
     "@ngtools/webpack": "^12.2.2",
     "@types/faker": "^5.5.8",
     "@types/jest": "^27.0.1",
     "@types/luxon": "^2.0.0",
     "@types/node": "^16.6.2",
-    "codelyzer": "^6.0.2",
+    "codelyzer": "^0.0.28",
     "copy-webpack-plugin": "^9.0.1",
     "faker": "^5.5.3",
-    "firebase-tools": "^9.16.5",
+    "firebase-tools": "^13.0.1",
     "fuzzy": "^0.1.3",
     "inquirer": "^8.1.2",
     "inquirer-autocomplete-prompt": "^1.4.0",
     "jest": "^27.0.6",
     "jest-preset-angular": "^9.0.6",
     "open": "^8.2.1",
-    "protractor": "~7.0.0",
+    "protractor": "^3.3.0",
     "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
     "tslint": "^6.1.0",
