--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@angular/animations": "~16.2.12",
+    "@angular/cli": "~16.2.12",
     "@angular/cdk": "^15.2.9",
     "@angular/common": "~16.2.12",
     "@angular/compiler": "~16.2.12",
