--- a/package.json
+++ b/package.json
@@ -25,31 +25,31 @@
     "dns": "empty"
   },
   "dependencies": {
-    "@angular/animations": "~12.2.2",
-    "@angular/cdk": "^12.2.2",
-    "@angular/common": "~12.2.2",
-    "@angular/compiler": "~12.2.2",
-    "@angular/core": "~12.2.2",
+    "@angular/animations": "~13.4.0",
+    "@angular/cdk": "^13.3.9",
+    "@angular/common": "~13.4.0",
+    "@angular/compiler": "~13.4.0",
+    "@angular/core": "~13.4.0",
     "@angular/fire": "^6.1.5",
     "@angular/flex-layout": "^12.0.0-beta.34",
-    "@angular/forms": "~12.2.2",
-    "@angular/material": "^12.2.2",
-    "@angular/platform-browser": "~12.2.2",
-    "@angular/platform-browser-dynamic": "~12.2.2",
-    "@angular/router": "~12.2.2",
+    "@angular/forms": "~13.4.0",
+    "@angular/material": "^13.3.9",
+    "@angular/platform-browser": "~13.4.0",
+    "@angular/platform-browser-dynamic": "~13.4.0",
+    "@angular/router": "~13.4.0",
     "@fortawesome/angular-fontawesome": "^0.9.0",
     "@nativescript/angular": "^12.0.6",
     "@nativescript/core": "^8.0.8",
     "@nativescript/theme": "^3.0.1",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
-    "class-validator": "^0.13.1",
+    "class-validator": "^0.14.0",
     "core-js": "^3.16.2",
     "epubjs": "^0.3.90",
     "firebase": "^8.10.0",
     "luxon": "^2.0.2",
     "messageformat": "^2.3.0",
-    "nativescript-plugin-firebase": "^10.6.3",
+    "nativescript-plugin-firebase": "^5.2.0",
     "nativescript-pro-ui": "^3.4.1",
     "ngx-translate-messageformat-compiler": "^4.10.0",
     "postcss": "^8.3.11",
@@ -59,36 +59,36 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "0.1202.2",
-    "@angular-devkit/build-angular": "^12.1.1",
-    "@angular/cli": "~12.2.2",
-    "@angular/compiler-cli": "~12.2.2",
-    "@angular/language-service": "~12.2.2",
+    "@angular-devkit/architect": "0.1303.11",
+    "@angular-devkit/build-angular": "^13.3.11",
+    "@angular/cli": "^13.3.11",
+    "@angular/compiler-cli": "~13.4.0",
+    "@angular/language-service": "~13.4.0",
     "@nativescript/schematics": "^11.2.0",
     "@nativescript/tslint-rules": "~0.0.5",
     "@nativescript/types": "^8.0.1",
-    "@nativescript/webpack": "^4.1.0",
+    "@nativescript/webpack": "^5.0.18",
     "@ngneat/spectator": "^8.0.3",
     "@ngtools/webpack": "^12.2.2",
     "@types/faker": "^5.5.8",
     "@types/jest": "^27.0.1",
     "@types/luxon": "^2.0.0",
     "@types/node": "^16.6.2",
-    "codelyzer": "^6.0.2",
+    "codelyzer": "^0.0.28",
     "copy-webpack-plugin": "^9.0.1",
     "faker": "^5.5.3",
-    "firebase-tools": "^9.16.5",
+    "firebase-tools": "^13.0.2",
     "fuzzy": "^0.1.3",
     "inquirer": "^8.1.2",
     "inquirer-autocomplete-prompt": "^1.4.0",
     "jest": "^27.0.6",
     "jest-preset-angular": "^9.0.6",
     "open": "^8.2.1",
-    "protractor": "~7.0.0",
+    "protractor": "^7.0.0",
     "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
     "tslint": "^6.1.0",
-    "typescript": "~4.3.5"
+    "typescript": "~4.6.4"
   },
   "jest": {
     "preset": "jest-preset-angular",
