fix: fixing angular material error

--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,8 @@
               "lodash",
               "validator",
               "faker",
-              "event-emitter"
+              "event-emitter",
+              "@xmldom/xmldom"
            ],
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
