--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@nativescript/theme": "^3.0.1",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
+    "bootstrap": "^5.3.2",
     "class-validator": "^0.14.0",
     "core-js": "^3.16.2",
     "epubjs": "^0.3.90",
