--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
     "@nativescript/angular": "^14.2.8",
     "@nativescript/core": "^8.0.8",
     "@nativescript/theme": "^3.0.1",
-    "@ngx-translate/core": "^13.0.0",
-    "@ngx-translate/http-loader": "^6.0.0",
+    "@ngx-translate/core": "^14.0.0",
+    "@ngx-translate/http-loader": "^7.0.0",
     "bootstrap": "^5.3.2",
     "class-validator": "^0.14.0",
     "core-js": "^3.16.2",
@@ -56,7 +56,7 @@
     "reflect-metadata": "~0.1.13",
     "rxjs": "^7.3.0",
     "tslib": "^2.3.1",
-    "zone.js": "~0.11.4"
+    "zone.js": "^0.12.0"
   },
   "devDependencies": {
     "@angular-devkit/architect": "0.1402.13",
@@ -68,10 +68,10 @@
     "@nativescript/tslint-rules": "~0.0.5",
     "@nativescript/types": "^8.0.1",
     "@nativescript/webpack": "^5.0.18",
-    "@ngneat/spectator": "^8.0.3",
-    "@ngtools/webpack": "^12.2.2",
+    "@ngneat/spectator": "^16.0.0",
+    "@ngtools/webpack": "^14.2.13",
     "@types/faker": "^5.5.8",
-    "@types/jest": "^27.0.1",
+    "@types/jest": "^28.1.8",
     "@types/luxon": "^2.0.0",
     "@types/node": "^16.6.2",
     "codelyzer": "^0.0.28",
